read more template updated and content added

--- a/contentStep1.html
+++ b/contentStep1.html
@@ -1,13 +1,13 @@
 <div class="col-xs-12 col-md-4 col-lg-4">
 	<h3>Overview</h3>
 	<div class="scroll">
-		<p>People need to live on the streets nine months to meet the city’s “chronicity requirement.” Until reaching that point, and working with outreach teams to prove it, the majority of housing programs, transitional or permanent, are not options.</p>
+		<p>Homeless New Yorkers have a legal "right to shelter," but thousands of people choose to avoid the shelter system altogether. They tell us they feel safer or more comfortable sleeping on the streets than in the shelter system. Governor Cuomo recently called this, "a rational choice."</p>
 		<div class="accordion" id="accordionExample">
 			<div class="card">
 				<div class="card-header" id="ov1Heading1">
 					<h5 class="mb-0">
 						<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#ov1Collapse1" aria-expanded="false" aria-controls="ov1Collapse1">
-							People need to live on the streets for 9 months to be chronically homeless
+							People tell us their experiences at the intake and assessment shelters are traumatic
 						</button>
 					</h5>
 				</div>
