--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 			</div>
 		</nav>
 		<div id="modalLearnMore"></div>
+		<div id="modalReadMore"></div>
 	  	<div class="wrapper">
 	  		<!-- Modal --
 	  		<object data="learnmore.html"> 
