--- a/moreStep2ov3.html
+++ b/moreStep2ov3.html
@@ -7,12 +7,14 @@
 	</div>
 	<div class="row">
 		<div class="col col-md-12 col-lg-4">
+			<p class="highlight medium">We have learned that “there is no formal system for transferring case files from one provider to another,” which can lead to issues when someone moves from one primary location to a new one.</p>
+			<ul class="quotes">
+				<li>See page 24: NYC Mayor's Office of Operations. (2017, November). NYC HOME-STAT Stakeholder research insights report: Documenting the journey from street to home January - May 2016. Retrieved July 27, 2018, from <a target="_blank" href="https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017">https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017</a></li>
+			</ul>
+		</div>
+		<div class="col col-md-12 col-lg-8">
 			<p>People experiencing homelessness may change their primary location for a variety of reasons. Scaffolding comes up and down and business owners and communities may not always be friendly and welcoming. People who are homeless may move around before they settle somewhere comfortable. We have learned that “there is no formal system for transferring case files from one provider to another,” which can lead to issues when someone moves from one primary location to a new one. Outreach teams operate within an assigned “zone” and do not typically search for their clients outside of these locations. If a client moves into a new “zone” it can cause confusion in determining who provides services to this individual. Moving from one location to another means that individuals may be engaged by different outreach teams at different times, leading to potential confusion about who’s caseload they are actually assigned to.</p>
-		</div>
-		<div class="col col-md-12 col-lg-4">
 			<p>One example we have heard which reflects the confusion between service providers is about the boundaries between BRC and Breaking Ground, specifically near Penn Station and the area directly surrounding it. BRC is contracted by the MTA to provide outreach services in Penn Station and the subways, whereas Breaking Ground is subcontracted by DHS to provide services between 23rd and 59th St. People who live around Penn Station and go in and out of the station are often confused by which team they work with, and with both teams beginning with the letters "BR—", we often meet people who do not know which team is theirs. People often move in and out of Penn Station for many reasons, like changes in weather or needing to use the bathroom. The boundaries established through contracts can make it confusing for people to know who they are working with, and possibly perpetuates the idea that a person cannot move from a location without starting the process over.</p>
-		</div>
-		<div class="col col-md-12 col-lg-4">
 			<p>In addition, Business Improvement Districts (BIDs) formed by private business and property owners in the same area contract Urban Pathways, another nonprofit, to conduct outreach in midtown as well. A third outreach team in the same area only creates more confusion for street homeless folks.</p>
 			<p>Lastly, there is a risk that outreach teams have more than one entry in their database per person. This can happen when there may be more than one spelling for a person’s name, or information gets input incorrectly into the database. Misinformation can lead to someone being stuck waiting for these “sightings” longer than necessary, as it is unclear how long a person has been known to an outreach team.</p>
 		</div>
