--- a/moreStep3re2.html
+++ b/moreStep3re2.html
@@ -7,6 +7,13 @@
 	</div>
 	<div class="row">
 		<div class="col col-md-12 col-lg-4">
+			<p class="highlight medium">A new model of Safe Haven would prevent people from having to live on the streets waiting to meet eligibility requirements.</p>
+			<ul class="quotes">
+				<li>Bowery Residents' Committee. (2018). Safe Haven. Retrieved August 24, 2018, from <a target="_blank" href="http://www.brc.org/safe-haven">http://www.brc.org/safe-haven</a></li>
+				<li>See page 24: NYC Mayor's Office of Operations. (2017, November). NYC HOME-STAT Stakeholder research insights report: Documenting the journey from street to home January - May 2016. Retrieved July 27, 2018, from <a target="_blank" href="https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017">https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017</a></li>
+			</ul>
+		</div>
+		<div class="col col-md-12 col-lg-8">
 			<p>Safe Havens were originally designed to provide transitional housing for chronically homeless individuals without the same barriers as traditional shelters. First opened in 2006, they allow individuals to access services without committing to sobriety, curfews, or highly structured programming. The model has shown that people who have previously been mislabeled as “service resistant” are willing to move inside with the right offer.</p>
 			<p>We believe there should be a separate Safe Haven model which serves people who are not yet chronically homeless, but are likely to become chronically homeless. A provider shared that, “If you hit 90 days on the street, you have an equal chance of hitting a year”. A new model of Safe Haven would prevent people from having to live on the streets waiting to meet eligibility requirements. The new model would allow the city to overcome the unintended consequence, forcing people to wait outside to meet the chronicity requirement, and would instead serve people who meet the Safe Haven eligibility requirements.</p>
 			<p>Moreover, the new model of Safe Haven could be designed to meet the needs of other subgroups excluded from traditional Safe Havens, such as couples or people with pets.</p>
