--- a/moreStep4re2.html
+++ b/moreStep4re2.html
@@ -7,12 +7,15 @@
 	</div>
 	<div class="row">
 		<div class="col col-md-12 col-lg-4">
+			<p class="highlights medium">This program would target those who have opioid addictions and are in the most need of permanent stable housing rather than a transitional Safe Haven.</p>
+			<ul class="quotes">
+				<li>NYC Department of Homeless Services. (2017). Turning the tide on homelessness in New York City. Retrieved from <a target="_blank" href="https://www1.nyc.gov/assets/dhs/downloads/pdf/turning-the-tide-on-homelessness.pdf">https://www1.nyc.gov/assets/dhs/downloads/pdf/turning-the-tide-on-homelessness.pdf</a></li>
+				<li>Ward Family Foundation, Inc. (2005, July). Safe Haven programs: Analysis of strategies and operating practices. Retrieved from <a target="_blank" href="http://www.wardfamilyfoundation.org/wff-safehaven-programs.pdf">http://www.wardfamilyfoundation.org/wff-safehaven-programs.pdf</a></li>
+			</ul>
+		</div>
+		<div class="col col-md-12 col-lg-8">
 			<p>If there were an increased supply of permanent housing options, there would be less of a need for additional Safe Haven beds. However, while the city continues to expand housing options for homeless New Yorkers, we recommend that the city add more Safe Haven beds to provide transitional housing for those who are chronically street homeless. We believe Safe Havens should be expanded particularly in areas which are currently underserved. Safe Havens have fewer requirements for accessing services and have been consistently used to provide temporary housing to individuals who are chronically homeless.</p>
-		</div>
-		<div class="col col-md-12 col-lg-4">
 			<p>There are currently Safe Havens located in Manhattan, Brooklyn, and the Bronx. Despite the lower threshold and higher flexibility that Safe Havens offer, people are sometimes still hesitant and uncomfortable with moving to an unfamiliar location. The city has already decided to increase the available number of Safe Haven beds, and has reported target increases of over 220 beds within the last year, and we recommend that these beds be targeted to areas which there is currently no capacity, specifically in East Midtown Manhattan. Opening Safe Havens in locations where there currently are none, as well as in high-density areas will allow for people to access transitional housing services within their communities. </p>
-		</div>
-		<div class="col col-md-12 col-lg-4">
 			<p>Safe Havens have been found to be effective in assisting chronically homeless individuals transition into permanent housing, when permanent housing is actually available. A large survey on Safe Havens, including those in New York City, found that more than half of Safe Haven residents transition into permanent housing, and of those who did not transition into permanent housing, it was often due to a shortage of permanent housing with the supportive services they needed and/or by a lack of subsidies that would enable them to afford available housing. 
 			<p>If an increase in Safe Haven beds were combined with an increased supply of permanent housing options, many more of these Safe Haven residents may be able to successfully transition from the streets to permanent housing, all while receiving the appropriate supportive services. Finally, if the supply for Safe Haven beds ever exceeds the demand, Safe Havens could be converted into affordable housing.</p>
 		</div>
