--- a/moreStep5ov2.html
+++ b/moreStep5ov2.html
@@ -7,6 +7,12 @@
 	</div>
 	<div class="row">
 		<div class="col col-md-12 col-lg-4">
+			<p class="highlight medium">Many times, a [birth certificate] copy is not acceptable, and an original must be provided. People often encounter difficulties in obtaining their birth certificate, particularly those born out of state.</p>
+			<ul class="quotes">
+				<li>NYC Mayor's Office of Operations. (2017, November). NYC HOME-STAT Stakeholder research insights report: Documenting the journey from street to home January - May 2016. Retrieved July 27, 2018, from <a target="_blank" href="https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017">https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017</a></li>
+			</ul>
+		</div>
+		<div class="col col-md-12 col-lg-8">
 			<p>Birth certificates are another way which people must prove their identity to move forward in the housing process. Many times, a copy is not acceptable, and an original must be provided. People often encounter difficulties in obtaining their birth certificate, particularly those born out of state. Additionally, older clients may have handwritten birth certificates which have inaccurate or illegible information, leading to a delay in verification and processing. Furthermore, some people may not remember their date or location of birth. People born at home may not even have a birth certificate. People who were born outside of the country are not required to have an original birth certificate, however must provide documentation of naturalization.</p>
 		</div>
 	</div>
