--- a/moreStep5ov4.html
+++ b/moreStep5ov4.html
@@ -7,6 +7,12 @@
 	</div>
 	<div class="row">
 		<div class="col col-md-12 col-lg-4">
+			<p class="highlight medium">So, for a homeless individual who has lost their vital documents, the cost to apply for new ones can add up.</p>
+			<ul class="quotes">
+				<li>NYC Mayor's Office of Operations. (2017, November). NYC HOME-STAT Stakeholder research insights report: Documenting the journey from street to home January - May 2016. Retrieved July 27, 2018, from <a target="_blank" href="https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017">https://www1.nyc.gov/assets/servicedesign/downloads/pdf/NYC-Home-Stat_Insights_Report-2017</a></li>
+			</ul>
+		</div>
+		<div class="col col-md-12 col-lg-8">
 			<p>People are required to have a form of photo identification to obtain permanent housing. For individuals who need to obtain a new state ID, the process of waiting at the DMV can be stressful. In order to obtain a state ID, individuals must be able to bring original versions of their birth certificate and social security card to their DMV appointment. Not only are photo IDs necessary for obtaining permanent housing, but they are also necessary for applying to health insurance such as Medicaid. So, for a homeless individual who has lost their vital documents, the cost to apply for new ones can add up. Additionally, internet access is needed in order to schedule appointments at the DMV, which presents another barrier to obtaining a new photo ID. For street homeless New Yorkers on caseload, their outreach worker may be able to help them navigate this process.</p>
 		</div>
 	</div>
