--- a/moreStep8re2.html
+++ b/moreStep8re2.html
@@ -7,6 +7,9 @@
 	</div>
 	<div class="row">
 		<div class="col col-md-12 col-lg-4">
+			<p class="highlights medium">Allowing individuals to update their income and receive rent portions appropriate to their means throughout the year will also clear up these cases from housing court and case management or legal caseloads, freeing up space in these overcrowded agencies for other individuals who may need support.</p>
+		</div>
+		<div class="col col-md-12 col-lg-8">
 			<p>We recommend that HRA allow CityFHEPS voucher holders to update their income and have their rent portion amount adjusted on an as-needed basis, rather than only during the annual recertification period. That way, if individuals lose a job, they will not fall into arrears and end up needing to go through the housing court process and apply for city-funded emergency arrears assistance (One Shot Deals). Allowing individuals to update their income and receive rent portions appropriate to their means throughout the year will also clear up these cases from housing court and case management or legal caseloads, freeing up space in these overcrowded agencies for other individuals who may need support.</p>
 		</div>
 	</div>
