--- a/moreStep8re6.html
+++ b/moreStep8re6.html
@@ -7,10 +7,18 @@
 	</div>
 	<div class="row">
 		<div class="col col-md-12 col-lg-4">
+			<p class="highlights medium">Peer Support could help prevent housing exits, discrimination, and relapse, while also empowering individuals with the knowledge and tools to sustain an independent, sober, stable lifestyle--should they choose to have one--while living in long-term housing.</p>
+			<ul class="quotes">
+				<li>Hartnett, S. (2018, April 06). Pure peer power. Retrieved November 1, 2018, from <a target="_blank" href="https://prezi.com/fiefdah9zzxd/pure-peer-power/?utm_campaign=share&utm_medium=copy">https://prezi.com/fiefdah9zzxd/pure-peer-power/?utm_campaign=share&utm_medium=copy</a></li>
+				<li>Barker, S. L., & Maguire, N. (2017). Experts by experience: Peer Support and its use with the homeless. Community Mental Health Journal, 53(5), 598-612.</li>
+				<li>Jamison, S.B., Sofronski, C., Johnson, S., & Wolff, J. (2017). Many pathways: An analysis of homeless service systems for adults with behavioral health challenges in Bucks and Delaware counties. Mental Health Partnerships. </li>
+				<li>Barker, S. L., & Maguire, N. (2017). Experts by experience: Peer Support and its use with the homeless. Community Mental Health Journal, 53(5), 598-612.</li>
+				<li>Bean, K. F., Shafer, M. S., & Glennon, M. (2013). The impact of housing first and Peer Support on people who are medically vulnerable and homeless. Psychiatric Rehabilitation Journal, 36(1), 48.</li>
+			</ul>
+		</div>
+		<div class="col col-md-12 col-lg-8">
 			<p>We believe that Peer Support for people transitioning into housing would be a worthwhile investment. The program can be modeled after the Skid Row Housing Trust’s Peer Advocates Support Group, which is designed to “provide additional support, from people with lived experience, to new and existing residents at Skid Row Housing Trust so that they can achieve their goals.” People making the transition from the streets to housing are greeted by a Peer Advocate who can empathize with the difficulty of the transition, and in turn provide additional emotional and logistical support.</p>
 			<p>Peer Support could help prevent housing exits, discrimination, and relapse, while also empowering individuals with the knowledge and tools to sustain an independent, sober, stable lifestyle--should they choose to have one--while living in long-term housing.
-		</div>
-		<div class="col col-md-12 col-lg-4">
 			<p>Research backs up the success of Peer Support. In a meta-analysis of the effect of Peer Support in homeless services, it was found that supportive services, when rendered by Peer Supporters, are more effective in reducing alcohol rates, drug abuse rates, increasing mental health stability, prosocial behavior, social support, self-image, and overall quality of life than when rendered by non-Peer Supporters. In some of these cases, Peer Supporters were specially trained as Certified Peer Specialists who work specifically with homeless individuals who are also living with mental illness or substance abuse. These Certified Peer Specialists help with goal-setting and serve as a support network for people experiencing homelessness, either as case managers, non-intervention group leaders, intervention group leaders, therapy leaders, addiction treatment leaders, mentors, and reintegration guides. In other programs throughout the country, Peer Support has been successful in helping 98% of participants find and maintain housing for at least one year. </p>
 			<p>Finally, we believe Peer Advocates should be a separate line item role when budgeting, however, they should work the same hours and be paid the same wages as their counterparts.</p>
 		</div>
