--- a/moreStep1ov5.html
+++ b/moreStep1ov5.html
@@ -7,9 +7,14 @@
 	</div>
 	<div class="row">
 		<div class="col col-md-12 col-lg-4">
-			<p>Currently, under the federal Fair Housing Act and the Americans with Disabilities Act, only service animals or documented emotional support animals (ESAs) owned by individuals with medically diagnosed mental or physical disabilities are allowed to keep their animals with them in homeless shelters. Despite this, implementation of service animal and ESA friendly policies in homeless shelters are indiscriminately applied and often times ineffective in serving the population they mean to reach. In many cases, homeless shelters are not in compliance with the bare minimum law in accepting ESAs and service animals. </p>
+			<p class="highlight medium">We have heard repeatedly that people ensure the safety and health of their pets over themselves, and have seen firsthand the comfort and support pets and assistance animals provide to individuals experiencing homelessness.</p>
+			<ul class="quotes">
+				<li>Aliment, R., Rankin, S., & Lurie, K. (2016). No pets allowed: Discrimination, homelessness, and pet ownership. Seattle University School of Law, Homeless Rights Advocacy Project, 2016,3. Retrieved July 26, 2018, from <a target="_blank" href="https://digitalcommons.law.seattleu.edu/cgi/viewcontent.cgi?article=1007&context=hrap"> https://digitalcommons.law.seattleu.edu/cgi/viewcontent.cgi?article=1007&context=hrap</a></li>
+				<li>Slatter, J., Lloyd, C., & King, R. (2012). Homelessness and companion animals: More than just a pet? British Journal of Occupational Therapy, 75(8), 377-383</li>
+			</ul>
 		</div>
-		<div class="col col-md-12 col-lg-4">
+		<div class="col col-md-12 col-lg-8">
+			<p>Currently, under the federal Fair Housing Act and the Americans with Disabilities Act, only service animals or documented emotional support animals (ESAs) owned by individuals with medically diagnosed mental or physical disabilities are allowed to keep their animals with them in homeless shelters. Despite this, implementation of service animal and ESA friendly policies in homeless shelters are indiscriminately applied and often times ineffective in serving the population they mean to reach. In many cases, homeless shelters are not in compliance with the bare minimum law in accepting ESAs and service animals. </p>
 			<p>We have heard repeatedly that people ensure the safety and health of their pets over themselves, and have seen firsthand the comfort and support pets and assistance animals provide to individuals experiencing homelessness. Even in cases where separation from their animal would be temporary in the form of boarding or fostering, often provided or supported by municipal animal services, individuals would rather stay with their pets instead of being separated even for a short period of time. The support animals provide is recognized by an emerging literature base in social work, clinical psychology, and other disciplines. Research indicates that specifically in circumstances of homelessness, animals provide their humans with a sense of responsibility, companionship, and greater emotional wellbeing.</p>
 		</div>
 	</div>
