--- a/moreStep7re1.html
+++ b/moreStep7re1.html
@@ -7,6 +7,12 @@
 	</div>
 	<div class="row">
 		<div class="col col-md-12 col-lg-4">
+			<p class="highlights medium">Per HUD’s description, “Everyone is ‘housing ready.’ Sobriety, compliance in treatment, or even criminal histories are not necessary to succeed in housing. Rather, homelessness programs and housing providers must be ‘consumer ready.’”</p>
+			<ul class="quotes">
+				<li>Coalition for the Homeless. (2018). About House Our Future NY. Retrieved September 21, 2018, from <a target="_blank" href="http://www.coalitionforthehomeless.org/event/house-our-future-ny/#1">http://www.coalitionforthehomeless.org/event/house-our-future-ny/#1</a></li>
+			</ul>
+		</div>
+		<div class="col col-md-12 col-lg-8">
 			<p>We have signed onto the Coalition For The Homeless’ House Our Future NY Campaign. Per the Coalition For The Homeless, “New York City is in the midst of the worst homelessness crisis since the Great Depression, with 63,000 people – including more than 23,000 children – sleeping in shelters each night. In order to match the unprecedented need, the City must employ every available affordable housing resource. Mayor de Blasio must align his historic Housing New York plan with the reality of record homelessness by immediately increasing the total number of housing units created for homeless households to 30,000 – 10 percent of his overall 300,000-unit plan.”</p>
 		</div>
 	</div>
