--- a/contentStep1.html
+++ b/contentStep1.html
@@ -59,7 +59,7 @@
 				</div>
 				<div id="ov1Collapse4" class="collapse" aria-labelledby="ov1Heading4" data-parent="#accordionExample">
 					<div class="card-body">
-						<p>In his Turning the Tide on Homelessness report, the Mayor recognized that historically people in shelters have been placed in neighborhoods and boroughs far from where they came from - he pledged to work on placing people in shelters closer to their communities of origin. However, we continue to encounter single adults whose assigned shelter is located far away from the services and people they want to be near; people continue to choose sleeping on the streets near their daily programs, like outpatient substance abuse treatment, rather than commute hours each day from their shelter. </p>
+						<p>The strict eligibility for adult families (families without children) at AFIC, the Adult Family Intake Center, is a driver in street homelessness. There is no right to shelter for adult families who want to stay together, and instead, adult families must go through intake and eligibility process which often ends in an “ineligible for shelter” determination.  Many people prefer to stay outside with their loved ones than separate into different shelters.</p>
 						<p><button class="btn btn-link" onclick="readMore1('moreStep1ov4')">Read More</button></p>
 					</div>
 				</div>
@@ -83,7 +83,7 @@
 				<div class="card-header" id="ov1Heading6">
 					<h5 class="mb-0">
 						<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#ov1Collapse6" aria-expanded="false" aria-controls="ov1Collapse6">
-							People understandably won't give up their pets, which are not allowed in shelters
+							The way the city "categorizes" people into shelters can create problematic situations
 						</button>
 					</h5>
 				</div>
@@ -143,7 +143,7 @@
 				</div>
 				<div id="re1Collapse3" class="collapse" aria-labelledby="re1Heading3" data-parent="#accordionExample">
 					<div class="card-body">
-						<p>People will be more likely to stay in their assigned shelter if they have the opportunity to take part in the assignment process. We recommend that case managers within assessment shelters be given the flexibility and discretion to assign individuals to program shelters which will best meet their individual needs, and provide residents the opportunity to have input into their shelter assignment.  The shelter assignment process should not be rigid, and individuals should have the opportunity to transfer shelters if they feel they are not being served in their current placement. </p>
+						<p>People will be more likely to stay in their assigned shelter if they have the opportunity to take part in the assignment process. We recommend that case managers within assessment shelters be given the flexibility and discretion to assign individuals to program shelters which will best meet their individual needs, and provide residents the opportunity to have input into their shelter assignment.  The shelter assignment process should not be rigid, and individuals should have the opportunity to transfer shelters if they feel they are not being served in their current placement. We understand that this recommendation will be difficult to implement given the current shelter capacity crisis, but we hope that it is considered as more people transition into permanent housing</p>
 						<p><button class="btn btn-link" onclick="readMore1('moreStep1re3')">Read More</button></p>
 					</div>
 				</div>
