--- a/contentStep6.html
+++ b/contentStep6.html
@@ -55,7 +55,7 @@
 				<div class="card-header" id="ov6Heading4">
 					<h5 class="mb-0">
 						<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#ov6Collapse4" aria-expanded="false" aria-controls="ov6Collapse4">
-							For supportive housing, providers feel pressured to stretch their clients' diagnosis
+							Supportive housing providers can "cherry-pick" people for their housing units
 						</button>
 					</h5>
 				</div>
