--- a/contentStep7.html
+++ b/contentStep7.html
@@ -7,14 +7,14 @@
 				<div class="card-header" id="ov7Heading1">
 					<h5 class="mb-0">
 						<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#ov7Collapse1" aria-expanded="false" aria-controls="ov7Collapse1">
-							There is only one unit of supportive housing for every four eligible applicants
+							There is only one unit of supportive housing for every five eligible applicants
 						</button>
 					</h5>
 				</div>
 
 				<div id="ov7Collapse1" class="collapse" aria-labelledby="ov7Heading1" data-parent="#accordionExample">
 					<div class="card-body">
-						<p>The most recent data has suggested that there is only one unit of supportive housing for every four eligible people in need of housing, highlighting the lack of vacant units available for vulnerable homeless New Yorkers. In 2014, the length of time from obtaining an approved supportive housing application to an acceptance into supportive housing was over a year for individuals, likely due to the lack of available capacity.</p>
+						<p>The most recent data has suggested that there is only one unit of supportive housing for every five eligible people in need of housing, highlighting the lack of vacant units available for vulnerable homeless New Yorkers. In 2014, the length of time from obtaining an approved supportive housing application to an acceptance into supportive housing was over a year for individuals, likely due to the lack of available capacity.</p>
 						<p><button class="btn btn-link" onclick="readMore7('moreStep7ov1')">Read More</button></p>
 					</div>
 				</div>
