--- a/contentStep8.html
+++ b/contentStep8.html
@@ -102,7 +102,7 @@
 
 				<div id="re8Collapse3" class="collapse" aria-labelledby="re8Heading3" data-parent="#accordionExample">
 					<div class="card-body">
-						<p>We recommend providing aftercare services for all individuals placed into permanent housing. The transition into permanent housing can be a big change, especially for those who have spent years living in facilities surrounded by other people. While we have heard that some programs do consistently provide aftercare, we recommend that this becomes protocol for all permanent housing placements.</p>
+						<p>We also recommend providing aftercare services for all individuals placed into permanent housing. The transition into permanent housing can be a big change, especially for those who have spent years living in facilities surrounded by other people. Housed individuals are meant to remain on caseload for one year after placement, and we recommend that outreach providers maintain regular follow-up and contact during this period to promote successful transitions into housing. </p>
 						<p><button class="btn btn-link" onclick="readMore8('moreStep8re3')">Read More</button></p>
 					</div>
 				</div>
