--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 									</div>
 									<div class="row">
 										<div class="col-12">
-											<h2>Sighting Process</h2>
+											<h2>&quot;Sighting Process&quot;</h2>
 											<p>NYC mandates people be "sighted" three times, in their sleep spot, at random, before being offered a case manager</p>
 											<hr>
 										</div>
@@ -219,7 +219,7 @@
 									</div>
 									<div class="row">
 										<div class="col-12">
-											<h2>9 Months on street</h2>
+											<h2>9 Months on the street</h2>
 											<p>NYC mandates people live outside for nine months before they can be placed into transitional or permanent housing</p>
 											<hr>
 										</div>
