--- a/moreStep1re3.html
+++ b/moreStep1re3.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col col-xs-12">
-			<h3>DHS should establish pet-friendly policies for the shelter system<hr></h3>
+			<h3>Homeless individuals should have input into the shelters they are placed into<hr></h3>
 			<button type="button" class="close readMoreClose" onclick="closeReadMore()"><span aria-hidden="true">&times;</span></button>
 		</div>
 	</div>
