--- a/contentStep2.html
+++ b/contentStep2.html
@@ -53,7 +53,7 @@
 				<div class="card-header" id="ov2Heading4">
 					<h5 class="mb-0">
 						<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#ov2Collapse4" aria-expanded="false" aria-controls="ov2Collapse4">
-							Outreach teams lack the capacity to canvass every block, everyday
+							Outreach teams lack the capacity to canvass every block, every day
 						</button>
 					</h5>
 				</div>
@@ -76,14 +76,14 @@
 				<div class="card-header" id="re2Heading1">
 					<h5 class="mb-0">
 						<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#re2Collapse1" aria-expanded="false" aria-controls="re2Collapse1">
-							People should not have to be &quot;sighted&quot; several times to access a case manager
+							People should not have to be &quot;sighted&quot; several times to access an outreach case manager
 						</button>
 					</h5>
 				</div>
 
 				<div id="re2Collapse1" class="collapse" aria-labelledby="re2Heading1" data-parent="#accordionExample">
 					<div class="card-body">
-						<p>If individuals express interest in working with a case manager, we recommend that there should be a process to be added to caseload without completing the current &quot;sightings&quot; or “homeless verification” process. Providing immediate access to an outreach case manager, when requested, will allow providers to build rapport with individuals by offering more personalized, human-centered services without the need to &quot;prove&quot; homelessness.</p>
+						<p>If individuals express interest in working with an outreach case manager, we recommend that there should be a process to be added to caseload without completing the current &quot;sightings&quot; or “homeless verification” process. Providing immediate access to an outreach case manager, when requested, will allow providers to build rapport with individuals by offering more personalized, human-centered services without the need to &quot;prove&quot; homelessness.</p>
 						<p><button class="btn btn-link" onclick="readMore2('moreStep2re1')">Read More</button></p>
 					</div>
 				</div>
