--- a/moreStep1ov5.html
+++ b/moreStep1ov5.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col col-xs-12">
-			<h3>Couples are often found "ineligible" for shelters that would allow them to stay together<hr></h3>
+			<h3>People understandably won't give up their pets, which are not allowed in shelters<hr></h3>
 			<button type="button" class="close readMoreClose" onclick="closeReadMore()"><span aria-hidden="true">&times;</span></button>
 		</div>
 	</div>
