--- a/moreStep7ov1.html
+++ b/moreStep7ov1.html
@@ -1,20 +1,20 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col col-xs-12">
-			<h3>There is only one unit of supportive housing for every four eligible applicants<hr></h3>
+			<h3>There is only one unit of supportive housing for every five eligible applicants<hr></h3>
 			<button type="button" class="close readMoreClose" onclick="closeReadMore()"><span aria-hidden="true">&times;</span></button>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col col-md-12 col-lg-4">
-			<p class="highlight medium">The most recent data has suggested that there is only one unit of supportive housing for every four eligible people in need of housing, highlighting the lack of vacant units available for vulnerable homeless New Yorkers.</p>
+			<p class="highlight medium">The most recent data has suggested that there is only one unit of supportive housing for every five eligible people in need of housing, highlighting the lack of vacant units available for vulnerable homeless New Yorkers.</p>
 			<ul class="quotes">
 				<li>NYC Department of Housing Preservation & Development. (2016). NYC 15/15 Initiative: 15,000 new units of supportive housing over the next 15 years. Retrieved from <a target="_blank" href="https://www1.nyc.gov/assets/hra/downloads/pdf/services/supportive-housing/Report for SH Task Force Recommendations.pdf">https://www1.nyc.gov/assets/hra/downloads/pdf/services/supportive-housing/Report for SH Task Force Recommendations.pdf</a></li>
 				<li>Leopold, J. (2014, February). Innovations in NYC Health & Human Services policy: Street homelessness and supportive housing. Retrieved from the Urban Institute website: <a target="_blank" href="https://www.urban.org/sites/default/files/publication/32661/413059-Innovations-in-NYC-Health-and-Human-Services-Policy-Street-Homelessness-and-Supportive-Housing.PDF">https://www.urban.org/sites/default/files/publication/32661/413059-Innovations-in-NYC-Health-and-Human-Services-Policy-Street-Homelessness-and-Supportive-Housing.PDF</a></li>
 			</ul>
 		</div>
 		<div class="col col-md-12 col-lg-8">
-			<p>The most recent data has suggested that there is only one unit of supportive housing for every four eligible people in need of housing, highlighting the lack of vacant units available for vulnerable homeless New Yorkers. In 2014, the length of time until acceptance into supportive housing had increased to over a year for individuals, likely due to the lack of available capacity.
+			<p>The most recent data has suggested that there is only one unit of supportive housing for every five eligible people in need of housing, highlighting the lack of vacant units available for vulnerable homeless New Yorkers. In 2014, the length of time until acceptance into supportive housing had increased to over a year for individuals, likely due to the lack of available capacity.
 			<p>Supportive housing is funded in part by the state and in part by the city. Traditionally, the Mayor and the Governor would agree on a joint deal called a “New York New York deal” (New York State + New York City). Most recently, in November 2005, Mayor Michael Bloomberg and Governor George Pataki committed to 9,000 supportive units.</p>
 			<p>Breaking from past New York New York deals, Governor Cuomo and Mayor de Blasio instead made separate commitments. The negotiation process, which ultimately broke down, delayed the introduction of the supportive housing plans, which contributes to the current shortage. On a more positive note, both Mayor de Blasio and Governor Cuomo made promising commitments, with Mayor de Blasio commiting 15,000 units over 15 years (the 15/15 plan) and Governor Cuomo commiting 20,000 units over 15 years.</p>
 		</div>
