--- a/contentStep1.html
+++ b/contentStep1.html
@@ -68,12 +68,13 @@
 				<div class="card-header" id="ov1Heading5">
 					<h5 class="mb-0">
 						<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#ov1Collapse5" aria-expanded="false" aria-controls="ov1Collapse5">
-							People understandably won't give up their pets, which are not allowed in shelters
+							My dog is my home: People understandably won't give up their pets, which are not allowed in shelters
 						</button>
 					</h5>
 				</div>
 				<div id="ov1Collapse5" class="collapse" aria-labelledby="ov1Heading5" data-parent="#accordionExample">
 					<div class="card-body">
+						<p>This section was written by our partner, <a target="_blank" href="https://www.mydogismyhome.org/">My Dog Is My Home:</a></p>
 						<p>People describe pets as members of their family, and choose to stay connected with their pets rather than give them up to live in a shelter. To access shelters and other resources (such as medical clinics, inpatient treatment, soup kitchens, etc.) they are told they must separate from their pet, a decision they may not choose, therefore leaving them few options but to remain unsheltered and untreated. </p>
 						<p><button class="btn btn-link" onclick="readMore1('moreStep1ov5')">Read More</button></p>
 					</div>
@@ -128,6 +129,7 @@
 				</div>
 				<div id="re1Collapse2" class="collapse" aria-labelledby="re1Heading2" data-parent="#accordionExample">
 					<div class="card-body">
+						<p>This section was written by our partner, <a target="_blank" href="https://www.mydogismyhome.org/">My Dog Is My Home:</a></p>
 						<p>DHS should invest in city-wide pet-friendly practices across program types (drop-in centers, emergency shelters, permanent supportive housing, etc.). At minimum, DHS should develop city-wide resources and support which help shelters meet compliance benchmarks with the Fair Housing Act and fulfill the Butler v. City of New York settlement by accepting service animals and emotional support animals. The policy should follow the federal and state guidelines for Reasonable Accommodations of emotional support and service animals, requiring no more paperwork and documentation than what is required by law. </p>
 						<p><button class="btn btn-link" onclick="readMore1('moreStep1Re2')">Read More</button></p>
 					</div>
