--- a/contentStep4.html
+++ b/contentStep4.html
@@ -54,7 +54,7 @@
 
 				<div id="re4Collapse1" class="collapse" aria-labelledby="re4Heading1" data-parent="#accordionExample">
 					<div class="card-body">
-						<p>We believe New York should replicate Pathways To Housing (PTH) Pennsylvania’s “Housing First For Opioid Users” program to address the growing opioid crisis. This program would target those who have opioid addictions and are most in need of permanent stable housing rather than a transitional Safe Haven. In its first 18 months, PTH placed 75 people the city prioritized as “most likely to die on the streets.” Thus far, 100% of them have retained their housing, and 51% are now in some form of treatment.</p>
+						<p>We believe New York should replicate <a target="_blank" href="https://pathwaystohousingpa.org/">Pathways To Housing</a> (PTH) Pennsylvania’s “Housing First For Opioid Users” program to address the growing opioid crisis. This program would target those who have opioid addictions and are most in need of permanent stable housing rather than a transitional Safe Haven. In its first 18 months, PTH placed 75 people the city prioritized as “most likely to die on the streets.” Thus far, 100% of them have retained their housing, and 51% are now in some form of treatment.</p>
 						<p><button class="btn btn-link" onclick="readMore4('moreStep4re1')">Read More</button></p>
 					</div>
 				</div>
