--- a/contentStep8.html
+++ b/contentStep8.html
@@ -150,7 +150,7 @@
 
 				<div id="re8Collapse6" class="collapse" aria-labelledby="re8Heading6" data-parent="#accordionExample">
 					<div class="card-body">
-						<p>We believe that Peer Support for people transitioning into housing would be a worthwhile investment. The program can be modeled after the Skid Row Housing Trust’s Peer Advocates Support Group, which is designed to “provide additional support, from people with lived experience, to new and existing residents at Skid Row Housing Trust so that they can achieve their goals.” People making the transition from the streets to housing are greeted by a Peer Advocate who can empathize with the difficulty of the transition, and in turn provide additional emotional and logistical support.</p>
+						<p>We believe that Peer Support for people transitioning into housing would be a worthwhile investment. The program can be modeled after the <a target="_blank" href="http://skidrow.org/peer-advocates-group/">Skid Row Housing Trust’s Peer Advocates Support Group</a>, which is designed to “provide additional support, from people with lived experience, to new and existing residents at Skid Row Housing Trust so that they can achieve their goals.” People making the transition from the streets to housing are greeted by a Peer Advocate who can empathize with the difficulty of the transition, and in turn provide additional emotional and logistical support.</p>
 						<p><button class="btn btn-link" onclick="readMore8('moreStep8re6')">Read More</button></p>
 					</div>
 				</div>
