--- a/moreStep7re3.html
+++ b/moreStep7re3.html
@@ -13,7 +13,7 @@
 			</ul>
 		</div>
 		<div class="col col-md-12 col-lg-8">
-			<p>We support VOCAL-New York’s recommendation that New York City accelerate its timeline for the creation of the promised 15,000 units from 15 years to 10 years. Likewise, we support VOCAL-New York’s recommendation that the state fully fund and create 20,000 units of supportive housing. Governor Cuomo promised 20,000 units and released funding for the first 6,000 in April, 2017.</p>
+			<p>We support <a target="_blank" href="http://www.vocal-ny.org/">VOCAL-New York</a>’s recommendation that New York City accelerate its timeline for the creation of the promised 15,000 units from 15 years to 10 years. Likewise, we support VOCAL-New York’s recommendation that the state fully fund and create 20,000 units of supportive housing. Governor Cuomo promised 20,000 units and released funding for the first 6,000 in April, 2017.</p>
 			<p>VOCAL-NY advocates that “supportive housing breaks the cycle of homelessness by pairing permanent housing with on-site services for people with a history of substance abuse, and/or who have mental and physical health needs.”</p>
 		</div>
 	</div>
