--- a/contentStep7.html
+++ b/contentStep7.html
@@ -70,7 +70,7 @@
 
 				<div id="re7Collapse1" class="collapse" aria-labelledby="re6Heading1" data-parent="#accordionExample">
 					<div class="card-body">
-						<p>Per the Coalition For The Homeless, “New York City is in the midst of the worst homelessness crisis since the Great Depression, with 63,000 people – including more than 23,000 children – sleeping in shelters each night. In order to match the unprecedented need, the City must employ every available affordable housing resource. Mayor de Blasio must align his historic Housing New York plan with the reality of record homelessness by immediately increasing the total number of housing units created for homeless households to 30,000 – 10 percent of his overall 300,000-unit plan."</p>
+						<p>Per the <a target="_blank" href="http://www.coalitionforthehomeless.org/">Coalition For The Homeless</a>, “New York City is in the midst of the worst homelessness crisis since the Great Depression, with 63,000 people – including more than 23,000 children – sleeping in shelters each night. In order to match the unprecedented need, the City must employ every available affordable housing resource. Mayor de Blasio must align his historic Housing New York plan with the reality of record homelessness by immediately increasing the total number of housing units created for homeless households to 30,000 – 10 percent of his overall 300,000-unit plan."</p>
 						<p><button class="btn btn-link" onclick="readMore7('moreStep7re1')">Read More</button></p>
 					</div>
 				</div>
@@ -86,7 +86,7 @@
 
 				<div id="re7Collapse2" class="collapse" aria-labelledby="re6Heading2" data-parent="#accordionExample">
 					<div class="card-body">
-						<p>In a 2007 survey, Picture The Homeless “found 1,723 abandoned buildings—containing 11,170 apartments—and 505 vacant lots in Manhattan. If those apartments were renovated and housing were built on the vacant lots, the group says, it would provide 24,000 units—which could become homes for the more than 9,000 families and 7,000 single adults living in city shelters last April, the 4,000 people the city says are living on the street, and another 4,000 street homeless who were likely missed in the city’s count.”</p>
+						<p>In a 2007 survey, <a target="_blank" href="http://picturethehomeless.org/">Picture The Homeless</a> “found 1,723 abandoned buildings—containing 11,170 apartments—and 505 vacant lots in Manhattan. If those apartments were renovated and housing were built on the vacant lots, the group says, it would provide 24,000 units—which could become homes for the more than 9,000 families and 7,000 single adults living in city shelters last April, the 4,000 people the city says are living on the street, and another 4,000 street homeless who were likely missed in the city’s count.”</p>
 						<p><button class="btn btn-link" onclick="readMore7('moreStep7re2')">Read More</button></p>
 					</div>
 				</div>
@@ -102,7 +102,7 @@
 
 				<div id="re7Collapse3" class="collapse" aria-labelledby="re6Heading3" data-parent="#accordionExample">
 					<div class="card-body">
-						<p>We support VOCAL-New York’s recommendation that New York City accelerate its timeline for the creation of the promised 15,000 units of permanent supportive housing from 15 years to 10 years. Likewise, we support VOCAL-New York’s recommendation that the state fully fund and create 20,000 units of supportive housing. Governor Cuomo promised 20,000 units and released funding for the first 6,000 in April, 2017.</p>
+						<p>We support <a target="_blank" href="http://www.vocal-ny.org/">VOCAL-New York</a>’s recommendation that New York City accelerate its timeline for the creation of the promised 15,000 units of permanent supportive housing from 15 years to 10 years. Likewise, we support VOCAL-New York’s recommendation that the state fully fund and create 20,000 units of supportive housing. Governor Cuomo promised 20,000 units and released funding for the first 6,000 in April, 2017.</p>
 						<p><button class="btn btn-link" onclick="readMore7('moreStep7re3')">Read More</button></p>
 					</div>
 				</div>
@@ -118,7 +118,7 @@
 
 				<div id="re7Collapse4" class="collapse" aria-labelledby="re6Heading4" data-parent="#accordionExample">
 					<div class="card-body">
-						<p>Both Picture The Homeless and VOCAL-NY, among other organizations, have advocated for further utilization of the Our Space Initiative. Per Picture The Homeless’ Business of Homelessness report, the city should “Shift DHS capital funding away from the expansion of the shelter system, and reinvest these capital funds into subsidies for extremely low income and homeless households. If $80 million in capital funds were shifted each year from DHS to HPD, the city could nearly double the amount currently invested in the Our Space Initiative, which subsidizes up to 30% of units in a new construction project with rents at the current shelter allowance.”</p>
+						<p>Both <a target="_blank" href="http://picturethehomeless.org/">Picture The Homeless</a> and <a target="_blank" href="http://www.vocal-ny.org/">VOCAL-New York</a>, among other organizations, have advocated for further utilization of the Our Space Initiative. Per Picture The Homeless’ Business of Homelessness report, the city should “Shift DHS capital funding away from the expansion of the shelter system, and reinvest these capital funds into subsidies for extremely low income and homeless households. If $80 million in capital funds were shifted each year from DHS to HPD, the city could nearly double the amount currently invested in the Our Space Initiative, which subsidizes up to 30% of units in a new construction project with rents at the current shelter allowance.”</p>
 						<p><button class="btn btn-link" onclick="readMore7('moreStep7re4')">Read More</button></p>
 					</div>
 				</div>
@@ -134,7 +134,7 @@
 
 				<div id="re7Collapse5" class="collapse" aria-labelledby="re6Heading5" data-parent="#accordionExample">
 					<div class="card-body">
-						<p>"Neighbors Together, working alongside VOCAL-NY, and Partnership for the Homeless in the New York City Homeless Union (NYCHU), compiled a series of recommendations to increase the City’s effectiveness at fighting source of income discrimination, and shared them with Commissioner Banks at the Department of Social Services.</p>
+						<p><a target="_blank" href="https://neighborstogether.org/">Neighbors Together</a>, working alongside VOCAL-NY, and Partnership for the Homeless in the New York City Homeless Union (NYCHU), compiled a series of recommendations to increase the City’s effectiveness at fighting source of income discrimination, and shared them with Commissioner Banks at the Department of Social Services.</p>
 						<p><button class="btn btn-link" onclick="readMore7('moreStep7re5')">Read More</button></p>
 					</div>
 				</div>
