--- a/moreStep1ov5.html
+++ b/moreStep1ov5.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col col-xs-12">
-			<h3>People understandably won't give up their pets, which are not allowed in shelters<hr></h3>
+			<h3>My dog is my home: People understandably won't give up their pets, which are not allowed in shelters<hr></h3>
 			<button type="button" class="close readMoreClose" onclick="closeReadMore()"><span aria-hidden="true">&times;</span></button>
 		</div>
 	</div>
@@ -14,6 +14,7 @@
 			</ul>
 		</div>
 		<div class="col col-md-12 col-lg-8">
+			<p>This section was written by our partner, <a target="_blank" href="https://www.mydogismyhome.org/">My Dog Is My Home:</a></p>
 			<p>Currently, under the federal Fair Housing Act and the Americans with Disabilities Act, only service animals or documented emotional support animals (ESAs) owned by individuals with medically diagnosed mental or physical disabilities are allowed to keep their animals with them in homeless shelters. Despite this, implementation of service animal and ESA friendly policies in homeless shelters are indiscriminately applied and often times ineffective in serving the population they mean to reach. In many cases, homeless shelters are not in compliance with the bare minimum law in accepting ESAs and service animals. </p>
 			<p>We have heard repeatedly that people ensure the safety and health of their pets over themselves, and have seen firsthand the comfort and support pets and assistance animals provide to individuals experiencing homelessness. Even in cases where separation from their animal would be temporary in the form of boarding or fostering, often provided or supported by municipal animal services, individuals would rather stay with their pets instead of being separated even for a short period of time. The support animals provide is recognized by an emerging literature base in social work, clinical psychology, and other disciplines. Research indicates that specifically in circumstances of homelessness, animals provide their humans with a sense of responsibility, companionship, and greater emotional wellbeing.</p>
 		</div>
