--- a/moreStep7re1.html
+++ b/moreStep7re1.html
@@ -13,7 +13,7 @@
 			</ul>
 		</div>
 		<div class="col col-md-12 col-lg-8">
-			<p>We have signed onto the Coalition For The Homeless’ House Our Future NY Campaign. Per the Coalition For The Homeless, “New York City is in the midst of the worst homelessness crisis since the Great Depression, with 63,000 people – including more than 23,000 children – sleeping in shelters each night. In order to match the unprecedented need, the City must employ every available affordable housing resource. Mayor de Blasio must align his historic Housing New York plan with the reality of record homelessness by immediately increasing the total number of housing units created for homeless households to 30,000 – 10 percent of his overall 300,000-unit plan.”</p>
+			<p>We have signed onto the <a target="_blank" href="http://www.coalitionforthehomeless.org/">Coalition For The Homeless</a> House Our Future NY Campaign. Per the Coalition For The Homeless, “New York City is in the midst of the worst homelessness crisis since the Great Depression, with 63,000 people – including more than 23,000 children – sleeping in shelters each night. In order to match the unprecedented need, the City must employ every available affordable housing resource. Mayor de Blasio must align his historic Housing New York plan with the reality of record homelessness by immediately increasing the total number of housing units created for homeless households to 30,000 – 10 percent of his overall 300,000-unit plan.”</p>
 		</div>
 	</div>
 </div>
