facebook img added and mobile version updated

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 	    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300" rel="stylesheet">
 	    <link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
 
+	    <!-- Facebook -->
+		<meta property="og:url" content="https://human.nyc">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Human NYC">
+		<meta property="og:image" content="https://human.nyc/website/imgs/humannyc_facebook.png">
+		<meta property="og:description" content="New York City's Street-to-Home Journey">
+		<meta property="og:site_name" content="Human NYC">
+		<meta property="og:locale" content="en_US">
+		<meta property="article:author" content="Human NYC">
+
 	    <script type="text/javascript" src="js/script.js"></script>
 	</head>
 	<body>
@@ -77,7 +87,7 @@
 							<div class="row">
 								<div class="col-sm-12 col-md-4 col-lg-5 text-center">
 									<h2 class="coverTitle">New York City&apos;s<br> Street-to-Home Journey</h2>
-									<div id="quote">
+									<div id="quote" class="d-none d-md-block">
 										<p>Click to explore a specific point<br/>
 										Scroll down to start at the beginning</p>
 									</div>
