facebook thumb updated

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta property="og:url" content="https://human.nyc">
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="Human NYC">
-		<meta property="og:image" content="https://human.nyc/website/imgs/humannyc_facebook.png">
+		<meta property="og:image" content="https://www.human.nyc/img/humannyc_facebook.jpg">
 		<meta property="og:description" content="New York City's Street-to-Home Journey">
 		<meta property="og:site_name" content="Human NYC">
 		<meta property="og:locale" content="en_US">
