trying to fix mobile

--- a/moreStep1ov3.html
+++ b/moreStep1ov3.html
@@ -6,10 +6,10 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col col-md-12 col-lg-4">
+		<div class="col-md-12 col-lg-4">
 			<p class="highlight medium">The shelter system has a history of placing people into shelters that are far from their communities of origin and away from the other services they are engaged with.</p>
 		</div>
-		<div class="col col-md-12 col-lg-8">
+		<div class="col-md-12 col-lg-8">
 			<p>The shelter system has a history of placing people into shelters that are far from their communities of origin and away from the other services they are engaged with. Throughout the intake process, individuals have little-to-no input into their shelter assignment. While the Mayor has pledged to work on this in his Turning the Tide on Homelessness Plan by building new shelters in communities where people are becoming homeless from, we continue to encounter this with single adults who choose to sleep on the streets near their daily programs, such as outpatient substance abuse programs, rather than commute hours each day from the shelter. </p>
 		</div>
 	</div>
